--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "ext-mysql_xdevapi": "*"
+        "ext-mysql_xdevapi": "*",
+	"ext-zip":"*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
